--- a/main.html
+++ b/main.html
@@ -8,6 +8,8 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+	<img src="https://images.unsplash.com/photo-1529778873920-4da4926a72c2?auto=format&fit=crop&q=60&w=500&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8Mnx8YW5pbWFsc3xlbnwwfHwwfHx8MA%3D%3D" alt="cute-cat">
+	
     <script type="text/javascript" src="./script.js">
 </script>
 
